--- a/style.css
+++ b/style.css
@@ -151,3 +151,22 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
+
+@media (max-width: 768px){
+    nav ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+    header h1 {
+        font-size: 2rem;
+    }
+    header p {
+        font-size: 1rem;
+    }
+    section{
+        padding: 20px;
+    }
+    .project h3{
+        font-size: 1.2rem;
+    }
+}
